[graphql] SchemaPrinter cleanup
GitOrigin-RevId: c5e4163e5fbcfa2cfe037fdd63a55f09e6e86713